# pyugt

./: LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  pyugt.py  requirements.txt  setup.py
pyugt/: __init__.py  _version.py  config.ini  config_example.ini  config_internal.ini  pyInstallerInstructions.txt  pyugt.py
src/pyugt/: __init__.py  config.ini  pyInstallerInstructions.txt  pyugt.py
